# starting-ragchatbot-codebase

./: CLAUDE.md  pyproject.toml  quality.sh
.claude/: settings.local.json
backend/: ai_generator.py  app.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_api_courses.py  test_api_query.py
frontend/: frontend-changes.md  index.html  script.js  style.css
scripts/: __init__.py  check.py  format.py
